--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,6 +7,11 @@
     <title>Vite + React + TS</title>
   </head>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+  <!-- Inside public/index.html -->
+<link href="https://fonts.googleapis.com/css2?family=Inter&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
